--- a/bin/install
+++ b/bin/install
@@ -3,7 +3,7 @@
 install_v() {
   local install_type=$1
   local version=$2
-  local install_path=$3/v
+  local install_path=$3
 
   if [ "$TMPDIR" = "" ]; then
     local tmp_download_dir=$(mktemp -d -t v_build_XXXXXX)
@@ -11,12 +11,12 @@ install_v() {
     local tmp_download_dir=$TMPDIR
   fi
 
-  # Delete previous symlinks to V if any, if not symlink, destroy it.
-  if [ -L ~/code/v ]; then
-    rm ~/code/v
-  else
-    rm -rf ~/code/v
-  fi
+  # # Delete previous symlinks to V if any, if not symlink, destroy it.
+  # if [ -L ~/code/v ]; then
+  #   rm ~/code/v
+  # else
+  #   rm -rf ~/code/v
+  # fi
 
   # path to the tar file
   local source_path=$(get_download_file_path $install_type $version $tmp_download_dir)
@@ -33,22 +33,20 @@ install_v() {
   # we don't want to disturb current working dir
   (
     if ! [ -e $install_path ]; then mkdir -p $install_path; fi
-    if ! [ -e ~/code ]; then mkdir -p ~/code; fi
 
     tar zxf $source_path -C $install_path --strip-components=1 || exit 1
 
-    ln -s $install_path ~/code/v
-    cd ~/code/v/compiler
+    cd $install_path
 
     # download v.c from github
     local vc_path=$(get_vc_download_file_path $install_type $version $tmp_download_dir)
-    download_vc $install_type $version v.c
+    download_vc $install_type $version $vc_path
 
     # @see https://aur.archlinux.org/cgit/aur.git/tree/PKGBUILD?h=vlang-git
     echo "==> Self-recompiling V compiler"
-    cc -std=gnu11 -w -o vc v.c
-    ./vc -o v .
-    ./v -o v .
+    echo $(pwd)
+    cc -std=gnu11 -w -o v $vc_path/v.c -lm
+    ./v -o v compiler
 
     if [ $? -ne 0 ]; then
       rm -rf $install_path
@@ -108,40 +106,47 @@ get_download_url() {
   local install_type=$1
   local version=$2
 
-  if [ "$install_type" = "ref" ]
-  then
-    echo "https://github.com/vlang/v/archive/${version}.tar.gz"
-  else
-    echo "https://github.com/vlang/v/archive/v${version}.tar.gz"
-  fi
+  echo "https://github.com/vlang/v/archive/${version}.tar.gz"
 }
 
 download_vc() {
   local install_type=$1
   local version=$2
   local download_path=$3
+  local filename=vc.tar.gz
+
+  if ! [ -e $download_path ]; then mkdir -p $download_path; fi
 
   if [ "$install_type" = "version" ]; then
-    local download_url=$(get_vc_download_url $version)
-
-    # determine if the file exists
-    echo "==> Checking whether specified release/reference containing v.c exists..."
-    http_status=$(curl -I -w %{http_code} -s -o /dev/null $download_url)
-
-    if [ $http_status -eq 404 ]; then
-      echo "==> Not Found, Falling back to master..."
-      download_master_vc $download_path
-    else
-      echo -e """==> Downloading ${version} to ${download_path} from ${download_url}"""
-      curl -Lo $download_path -C - $download_url
-    fi
+    download_tag_vc $download_path $filename
   else
-    download_master_vc $download_path
+    download_master_vc $download_path $filename
+  fi
+
+  tar zxf $download_path/$filename -C $download_path --strip-components=1 || exit 1
+}
+
+download_tag_vc() {
+  local download_path=$1
+  local filename=$2
+  local download_url=$(get_vc_download_url $version)
+
+  # determine if the file exists
+  echo "==> Checking whether specified release/reference containing v.c exists..."
+  http_status=$(curl -I -w %{http_code} -s -o /dev/null $download_url)
+
+  if [ $http_status -eq 404 ]; then
+    echo "==> v.c for specified version does not exist."
+    exit 1
+  else
+    echo -e """==> Downloading ${version} to ${download_path} from ${download_url}"""
+    curl -Lo $download_path/$filename -C - $download_url
   fi
 }
 
 download_master_vc() {
   local download_path=$1
+  local filename=$2
   local download_url=$(get_master_vc_download_url)
 
   # determine if the file exists
@@ -154,7 +159,7 @@ download_master_vc() {
   fi
 
   echo -e """==> Downloading master to ${download_path} from ${download_url}"""
-  curl -Lo $download_path -C - $download_url
+  curl -Lo $download_path/$filename -C - $download_url
 }
 
 get_vc_download_file_path() {
@@ -171,11 +176,11 @@ get_vc_download_file_path() {
 get_vc_download_url() {
   local version=$1
 
-  echo "https://github.com/vlang/v/releases/download/v${version}/v.c"
+  echo "https://github.com/vlang/vc/archive/${version}.tar.gz"
 }
 
 get_master_vc_download_url() {
-  echo "https://github.com/vlang/vc/raw/master/v.c"
+  echo "https://github.com/vlang/vc/archive/master.tar.gz"
 }
 
 install_v $ASDF_INSTALL_TYPE $ASDF_INSTALL_VERSION $ASDF_INSTALL_PATH
