--- a/bin/install
+++ b/bin/install
@@ -39,7 +39,7 @@ install_v() {
     echo "==> Self-recompiling V compiler"
     echo $(pwd)
     cc -std=gnu11 -w -o v $vc_path/v.c -lm
-    ./v -o v compiler
+    ./v -prod -o v compiler
 
     echo "==> Symlinking v into ./bin"
     if ! [ -e bin ]; then mkdir bin; fi
