--- a/bin/install
+++ b/bin/install
@@ -77,7 +77,7 @@ or by visiting https://github.com/vlang/v/releases
 specify the full version number (e.g. 1.2.1 instead of 1.3)."""
     else
       echo """Note: If you want to specify a git reference by which to install
-Elixir, it must be a valid git tag or branch (generally of the form v1.2.1)."""
+V, it must be a valid git tag or branch (generally of the form v1.2.1)."""
     fi
 
     exit 1 # non zero due to file not existing
@@ -114,31 +114,9 @@ download_vc() {
 
   if ! [ -e $download_path ]; then mkdir -p $download_path; fi
 
-  if [ "$install_type" = "version" ]; then
-    download_tag_vc $download_path $filename
-  else
-    download_master_vc $download_path $filename
-  fi
+  download_master_vc $download_path $filename
 
   tar zxf $download_path/$filename -C $download_path --strip-components=1 || exit 1
-}
-
-download_tag_vc() {
-  local download_path=$1
-  local filename=$2
-  local download_url=$(get_vc_download_url $version)
-
-  # determine if the file exists
-  echo "==> Checking whether specified release/reference containing v.c exists..."
-  http_status=$(curl -I -w %{http_code} -s -o /dev/null $download_url)
-
-  if [ $http_status -eq 404 ]; then
-    echo "==> v.c for specified version does not exist."
-    exit 1
-  else
-    echo -e """==> Downloading ${version} to ${download_path} from ${download_url}"""
-    curl -Lo $download_path/$filename -C - $download_url
-  fi
 }
 
 download_master_vc() {
@@ -170,12 +148,6 @@ get_vc_download_file_path() {
 }
 
 # Needed until v.c is not required for compiling
-get_vc_download_url() {
-  local version=$1
-
-  echo "https://github.com/vlang/vc/archive/${version}.tar.gz"
-}
-
 get_master_vc_download_url() {
   echo "https://github.com/vlang/vc/archive/master.tar.gz"
 }
